--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit
-streamlit_chat
-transformers
-einops
-accelerate
-sacremoses
-xformers
+streamlit=1.26.0
+streamlit_chat=0.6.2
+transformers=4.33.2
+einops=0.6.1
+accelerate=0.23.0
+torch=2.0.1
+sacremoses=0.0.53
+xformers=0.0.21
